--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Patrick East - creative-lead</title>
+    <title>Patrick East - UX & Product Designer</title>
   </head>
   <body>
     <div id="root"></div>
