--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&display=swap" rel="stylesheet">
+    
+    <!-- Core Meta -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Patrick East - UX & Product Designer</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>Patrick East | UX & Product Designer</title>
+    <meta name="title" content="Patrick East | UX & Product Designer" />
+    <meta name="description" content="UX and product designer with a focus on clarity, usability, and impact. I design experiences grounded in research, refined through iteration, and built in close collaboration with engineering." />
+
+    <!-- Open Graph / Facebook / LinkedIn -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://patrickeast.netlify.app/" />
+    <meta property="og:title" content="Patrick East | UX & Product Designer" />
+    <meta property="og:description" content="UX and product designer with a focus on clarity, usability, and impact. I design experiences grounded in research, refined through iteration, and built in close collaboration with engineering." />
+    <meta property="og:image" content="https://patrickeast.netlify.app/hero.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://patrickeast.netlify.app/" />
+    <meta property="twitter:title" content="Patrick East | UX & Product Designer" />
+    <meta property="twitter:description" content="UX and product designer with a focus on clarity, usability, and impact. I design experiences grounded in research, refined through iteration, and built in close collaboration with engineering." />
+    <meta property="twitter:image" content="https://patrickeast.netlify.app/hero.png" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
   </head>
   <body>
     <div id="root"></div>
